--- a/requirements_SVMCBO.txt
+++ b/requirements_SVMCBO.txt
@@ -18,15 +18,15 @@ packaging==20.4
 pandas==1.1.2
 Pillow==7.2.0
 pyaml==20.4.0
-pyDOE2==1.3.0
+pyDOE2>=1.3.0
 Pygments==2.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
-scikit-learn==0.23.2
-scikit-optimize==0.8.1
+scikit-learn>=0.23.2
+scikit-optimize>=0.8.1
 scipy==1.5.2
 six==1.15.0
 smt==0.6.0
